[gd_scene load_steps=10 format=2]

[ext_resource path="res://zone/zone2/stage04.gd" type="Script" id=1]
[ext_resource path="res://scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://map/Tile1.tres" type="TileSet" id=3]
[ext_resource path="res://player/keiki.tscn" type="PackedScene" id=4]
[ext_resource path="res://map/parallax/city_parallax.tscn" type="PackedScene" id=5]
[ext_resource path="res://map/shaders/fog_shader.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/Haniwa_knight/haniwa_knight.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemy/Haniwa_guard/haniwa_guard.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 56 )

[node name="stage04" type="Node2D"]
script = ExtResource( 1 )

[node name="city_parallax" parent="." instance=ExtResource( 5 )]

[node name="fog_shader" parent="." instance=ExtResource( 6 )]
visible = true
position = Vector2( 120, -264 )

[node name="MainMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1245200, 0, 65540, -1245199, 0, 65540, -1245198, 0, 65540, -1245197, 0, 65540, -1245196, 0, 65540, -1245195, 0, 65540, -1245194, 0, 65540, -1245193, 0, 65540, -1245192, 0, 65540, -1245191, 0, 65540, -1245190, 0, 65540, -1245189, 0, 65540, -1245188, 0, 65540, -1245187, 0, 65540, -1245186, 0, 65540, -1245185, 0, 65540, -1310720, 0, 65540, -1310719, 0, 65540, -1310718, 0, 65540, -1310717, 0, 65540, -1310716, 0, 65540, -1310715, 0, 65540, -1310714, 0, 65540, -1310713, 0, 65540, -1310712, 0, 65540, -1310711, 0, 65540, -1310710, 0, 65540, -1310709, 0, 65540, -1310708, 0, 65540, -1310707, 0, 65540, -1310706, 0, 65540, -1310705, 0, 65540, -1310704, 0, 65540, -1310703, 0, 65540, -1310702, 0, 65540, -1310701, 0, 65540, -1310700, 0, 65540, -1310699, 0, 65540, -1310698, 0, 65540, -1310697, 0, 65540, -1179664, 0, 65540, -1179663, 0, 65540, -1179662, 0, 65540, -1179661, 0, 65540, -1179660, 0, 65540, -1179659, 0, 65540, -1179658, 0, 65540, -1179657, 0, 65540, -1179656, 0, 65540, -1179655, 0, 65540, -1179654, 0, 65540, -1179653, 0, 65540, -1179652, 0, 65540, -1179651, 0, 65540, -1179650, 0, 65540, -1179649, 0, 65540, -1245184, 0, 65540, -1245183, 0, 65540, -1245182, 0, 65540, -1245181, 0, 65540, -1245180, 0, 65540, -1245179, 0, 65540, -1245178, 0, 65540, -1245177, 0, 65540, -1245176, 0, 65540, -1245175, 0, 65540, -1245174, 0, 65540, -1245173, 0, 65540, -1245172, 0, 65540, -1245171, 0, 65540, -1245170, 0, 65540, -1245169, 0, 65540, -1245168, 0, 65540, -1245167, 0, 65540, -1245166, 0, 65540, -1245165, 0, 65540, -1245164, 0, 65540, -1245163, 0, 65540, -1245162, 0, 65540, -1245161, 0, 65540, -1114128, 0, 65540, -1114127, 0, 65540, -1114126, 0, 65540, -1114125, 0, 65540, -1114124, 0, 65540, -1114123, 0, 65540, -1114122, 0, 65540, -1114121, 0, 65540, -1114120, 0, 65540, -1114119, 0, 65540, -1114118, 0, 65540, -1114117, 0, 65540, -1114116, 0, 65540, -1114115, 0, 65540, -1114114, 0, 65540, -1114113, 0, 65540, -1179648, 0, 65540, -1179647, 0, 65540, -1179646, 0, 65540, -1179645, 0, 65540, -1179644, 0, 65540, -1179643, 0, 65540, -1179642, 0, 65540, -1179641, 0, 65540, -1179640, 0, 65540, -1179639, 0, 65540, -1179638, 0, 65540, -1179637, 0, 65540, -1179636, 0, 65540, -1179635, 0, 65540, -1179634, 0, 65540, -1179633, 0, 65540, -1179632, 0, 65540, -1179631, 0, 65540, -1179630, 0, 65540, -1179629, 0, 65540, -1179628, 0, 65540, -1179627, 0, 65540, -1179626, 0, 65540, -1179625, 0, 65540, -1048592, 0, 65540, -1048591, 0, 65540, -1048590, 0, 65540, -1048589, 0, 65540, -1048588, 0, 65540, -1048587, 0, 65540, -1048586, 0, 65540, -1048585, 0, 65540, -1048584, 0, 65540, -1048583, 0, 65540, -1048582, 0, 65540, -1048581, 0, 65540, -1048580, 0, 65540, -1048579, 0, 65540, -1048578, 0, 65540, -1048577, 0, 65540, -1114112, 0, 65540, -1114111, 0, 65540, -1114110, 0, 65540, -1114109, 0, 65540, -1114108, 0, 65540, -1114107, 0, 65540, -1114106, 0, 65540, -1114105, 0, 65540, -1114104, 0, 65540, -1114103, 0, 65540, -1114102, 0, 65540, -1114101, 0, 65540, -1114100, 0, 65540, -1114099, 0, 65540, -1114098, 0, 65540, -1114097, 0, 65540, -1114096, 0, 65540, -1114095, 0, 65540, -1114094, 0, 65540, -1114093, 0, 65540, -1114092, 0, 65540, -1114091, 0, 65540, -1114090, 0, 65540, -1114089, 0, 65540, -983056, 0, 65540, -983055, 0, 65540, -983054, 0, 65540, -983053, 0, 65540, -983052, 0, 65540, -983051, 0, 65540, -983050, 0, 65540, -983049, 0, 65540, -983048, 0, 65540, -983047, 0, 65540, -983046, 0, 65540, -983045, 0, 65540, -983044, 0, 65540, -983043, 0, 65540, -983042, 0, 65540, -983041, 0, 65540, -1048576, 0, 65540, -1048575, 0, 65540, -1048574, 0, 65540, -1048573, 0, 65540, -1048572, 0, 65540, -1048571, 0, 65540, -1048570, 0, 65540, -1048569, 0, 65540, -1048568, 0, 65540, -1048567, 0, 65540, -1048566, 0, 65540, -1048565, 0, 65540, -1048564, 0, 65540, -1048563, 0, 65540, -1048562, 0, 65540, -1048561, 0, 65540, -1048560, 0, 65540, -1048559, 0, 65540, -1048558, 0, 65540, -1048557, 0, 65540, -1048556, 0, 65540, -1048555, 0, 65540, -1048554, 0, 65540, -1048553, 0, 65540, -917520, 0, 65540, -917519, 0, 65540, -917518, 0, 65540, -917517, 0, 65540, -917516, 0, 65540, -917515, 0, 65538, -917514, 0, 131073, -917513, 0, 131073, -917512, 0, 131073, -917511, 0, 131073, -917510, 0, 131073, -917509, 0, 131073, -917508, 0, 131073, -917507, 0, 131073, -917506, 0, 131073, -917505, 0, 131073, -983040, 0, 131073, -983039, 0, 131073, -983038, 0, 131073, -983037, 0, 131073, -983036, 0, 131073, -983035, 0, 131073, -983034, 0, 131073, -983033, 0, 131073, -983032, 0, 131073, -983031, 0, 131073, -983030, 0, 131073, -983029, 0, 131073, -983028, 0, 131073, -983027, 0, 131073, -983026, 0, 131073, -983025, 0, 131073, -983024, 0, 131073, -983023, 0, 131073, -983022, 0, 131073, -983021, 0, 131073, -983020, 0, 131073, -983019, 0, 131073, -983018, 0, 65540, -983017, 0, 65540, -851984, 0, 65540, -851983, 0, 65540, -851982, 0, 65540, -851981, 0, 65540, -851980, 0, 65540, -851979, 0, 65538, -917483, 0, 65536, -917482, 0, 65540, -917481, 0, 65540, -786448, 0, 65540, -786447, 0, 65540, -786446, 0, 65540, -786445, 0, 65540, -786444, 0, 65540, -786443, 0, 65538, -851947, 0, 65536, -851946, 0, 65540, -851945, 0, 65540, -720912, 0, 65540, -720911, 0, 65540, -720910, 0, 65540, -720909, 0, 65540, -720908, 0, 65540, -720907, 0, 65538, -786429, 0, 0, -786428, 0, 1, -786427, 0, 1, -786426, 0, 2, -786411, 0, 65536, -786410, 0, 65540, -786409, 0, 65540, -655376, 0, 65540, -655375, 0, 65540, -655374, 0, 65540, -655373, 0, 65540, -655372, 0, 65540, -655371, 0, 65538, -720893, 0, 65536, -720892, 0, 65540, -720891, 0, 65540, -720890, 0, 65536, -720875, 0, 65536, -720874, 0, 65540, -720873, 0, 65540, -589840, 0, 65540, -589839, 0, 65540, -589838, 0, 65540, -589837, 0, 65540, -589836, 0, 65540, -589835, 0, 65538, -655357, 0, 65536, -655356, 0, 65540, -655355, 0, 65540, -655354, 0, 65536, -655339, 0, 65536, -655338, 0, 65540, -655337, 0, 65540, -524304, 0, 65540, -524303, 0, 65540, -524302, 0, 65540, -524301, 0, 65540, -524300, 0, 65540, -524299, 0, 65538, -524296, 0, 0, -524295, 0, 1, -524294, 0, 1, -524293, 0, 1, -524292, 0, 1, -524291, 0, 1, -524290, 0, 1, -524289, 0, 1, -589824, 0, 1, -589823, 0, 1, -589822, 0, 1, -589821, 0, 1, -589820, 0, 131077, -589819, 0, 131075, -589818, 0, 1, -589817, 0, 1, -589816, 0, 1, -589815, 0, 1, -589814, 0, 1, -589813, 0, 1, -589812, 0, 1, -589811, 0, 1, -589810, 0, 1, -589809, 0, 1, -589808, 0, 1, -589807, 0, 2, -589803, 0, 65536, -589802, 0, 65540, -589801, 0, 65540, -458768, 0, 65540, -458767, 0, 65540, -458766, 0, 65540, -458765, 0, 65540, -458764, 0, 65540, -458763, 0, 65538, -524284, 0, 65536, -524283, 0, 65538, -524267, 0, 65536, -524266, 0, 65540, -524265, 0, 65540, -393232, 0, 65540, -393231, 0, 65540, -393230, 0, 65540, -393229, 0, 65540, -393228, 0, 65540, -393227, 0, 65538, -458748, 0, 65536, -458747, 0, 65538, -458731, 0, 65536, -458730, 0, 65540, -458729, 0, 65540, -327696, 0, 65540, -327695, 0, 65540, -327694, 0, 65540, -327693, 0, 65540, -327692, 0, 65540, -327691, 0, 65538, -393212, 0, 65536, -393211, 0, 65538, -393195, 0, 65536, -393194, 0, 65540, -393193, 0, 65540, -262160, 0, 65540, -262159, 0, 65540, -262158, 0, 65540, -262157, 0, 65540, -262156, 0, 65540, -262155, 0, 131075, -262154, 0, 1, -262153, 0, 1, -262152, 0, 1, -262151, 0, 1, -262150, 0, 1, -262149, 0, 1, -262148, 0, 1, -262147, 0, 1, -262146, 0, 1, -262145, 0, 1, -327680, 0, 2, -327676, 0, 65536, -327675, 0, 65538, -327671, 0, 0, -327670, 0, 1, -327669, 0, 1, -327668, 0, 1, -327667, 0, 1, -327666, 0, 1, -327665, 0, 1, -327664, 0, 1, -327663, 0, 1, -327662, 0, 1, -327661, 0, 1, -327660, 0, 1, -327659, 0, 65536, -327658, 0, 65540, -327657, 0, 65540, -196624, 0, 65540, -196623, 0, 65540, -196622, 0, 65540, -196621, 0, 65540, -196620, 0, 65540, -196619, 0, 65540, -196618, 0, 3, -196617, 0, 131073, -196616, 0, 131073, -196615, 0, 131073, -196614, 0, 131073, -196613, 0, 131073, -196612, 0, 131073, -196611, 0, 131073, -196610, 0, 131073, -196609, 0, 131073, -262144, 0, 131074, -262140, 0, 65536, -262139, 0, 65538, -262135, 0, 65536, -262134, 0, 65540, -262133, 0, 65540, -262132, 0, 65540, -262131, 0, 65540, -262130, 0, 65540, -262129, 0, 65540, -262128, 0, 65540, -262127, 0, 65540, -262126, 0, 65540, -262125, 0, 65540, -262124, 0, 65540, -262123, 0, 65540, -262122, 0, 65540, -262121, 0, 65540, -131088, 0, 65540, -131087, 0, 65540, -131086, 0, 65540, -131085, 0, 131073, -131084, 0, 131073, -131083, 0, 131073, -131082, 0, 131073, -131081, 0, 131074, -131080, 0, 65540, -131079, 0, 65540, -196604, 0, 65536, -196603, 0, 65538, -196599, 0, 131072, -196598, 0, 131073, -196597, 0, 131073, -196596, 0, 131073, -196595, 0, 131073, -196594, 0, 131073, -196593, 0, 131073, -196592, 0, 131073, -196591, 0, 131073, -196590, 0, 131073, -196589, 0, 131073, -196588, 0, 131073, -196587, 0, 131073, -196586, 0, 65540, -196585, 0, 65540, -65552, 0, 65540, -65551, 0, 65540, -65550, 0, 65540, -65549, 0, 65540, -65548, 0, 65540, -65547, 0, 65540, -65546, 0, 65540, -65545, 0, 65540, -65544, 0, 65540, -131068, 0, 65536, -131067, 0, 65538, -131058, 0, 65540, -131057, 0, 65540, -131056, 0, 65540, -131055, 0, 65540, -131054, 0, 65540, -131053, 0, 65540, -131052, 0, 65540, -131051, 0, 65540, -131050, 0, 65540, -131049, 0, 65540, -16, 0, 65540, -15, 0, 65540, -14, 0, 65540, -13, 0, 65540, -12, 0, 65540, -11, 0, 65540, -10, 0, 65540, -9, 0, 65540, -65532, 0, 65536, -65531, 0, 65538, -65520, 0, 65540, -65519, 0, 65540, -65518, 0, 65540, -65517, 0, 65540, -65516, 0, 65540, -65515, 0, 65540, -65514, 0, 65540, -65513, 0, 65540, 65520, 0, 1, 65521, 0, 1, 65522, 0, 1, 65523, 0, 1, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 131077, 5, 0, 131075, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 131056, 0, 65540, 131057, 0, 65540, 131058, 0, 65540, 131059, 0, 65540, 131060, 0, 65540, 131061, 0, 65540, 131062, 0, 65540, 131063, 0, 65540, 131064, 0, 65540, 131065, 0, 65540, 131066, 0, 65540, 131067, 0, 65540, 131068, 0, 65540, 131069, 0, 65540, 131070, 0, 65540, 131071, 0, 65540, 65536, 0, 65540, 65537, 0, 65540, 65538, 0, 65540, 65539, 0, 65540, 65540, 0, 65540, 65541, 0, 65540, 65542, 0, 65540, 65543, 0, 65540, 65544, 0, 65540, 65545, 0, 65540, 65546, 0, 65540, 65547, 0, 65540, 65548, 0, 65540, 65549, 0, 65540, 65550, 0, 65540, 65551, 0, 65540, 65552, 0, 65540, 65553, 0, 65540, 65554, 0, 65540, 65555, 0, 65540, 65556, 0, 65540, 65557, 0, 65540, 65558, 0, 65540, 65559, 0, 65540, 196592, 0, 65540, 196593, 0, 65540, 196594, 0, 65540, 196595, 0, 65540, 196596, 0, 65540, 196597, 0, 65540, 196598, 0, 65540, 196599, 0, 65540, 196600, 0, 65540, 196601, 0, 65540, 196602, 0, 65540, 196603, 0, 65540, 196604, 0, 65540, 196605, 0, 65540, 196606, 0, 65540, 196607, 0, 65540, 131072, 0, 65540, 131073, 0, 65540, 131074, 0, 65540, 131075, 0, 65540, 131076, 0, 65540, 131077, 0, 65540, 131078, 0, 65540, 131079, 0, 65540, 131080, 0, 65540, 131081, 0, 65540, 131082, 0, 65540, 131083, 0, 65540, 131084, 0, 65540, 131085, 0, 65540, 131086, 0, 65540, 131087, 0, 65540, 131088, 0, 65540, 131089, 0, 65540, 131090, 0, 65540, 131091, 0, 65540, 131092, 0, 65540, 131093, 0, 65540, 131094, 0, 65540, 131095, 0, 65540 )

[node name="FrontMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -917515, 0, 3, -983019, 0, 5, -327659, 0, 131077, -131078, 2, 131074, -196602, 1, 2, -196586, 0, 5, -65543, 2, 5, -131070, 1, 0, -131069, 1, 1, -131066, 1, 65538, -131059, 2, 131072, -8, 2, 5, -65534, 1, 65536, -65530, 1, 65538, -65520, 2, 131072 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, -32 )

[node name="MainCamera" type="Camera2D" parent="player"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 2 )

[node name="camera_limit_L" type="Position2D" parent="."]
position = Vector2( -416, -512 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="camera_limit_R" type="Position2D" parent="."]
position = Vector2( 704, 64 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="initial_position" type="Position2D" parent="."]
position = Vector2( -374, -30 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="end_position" type="Position2D" parent="."]
position = Vector2( 672, -32 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="enemy" type="Node2D" parent="."]

[node name="haniwa_knight" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( -72, -288 )

[node name="haniwa_knight2" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( 328, -288 )

[node name="haniwa_guard" parent="enemy" instance=ExtResource( 8 )]
position = Vector2( -208, -160 )

[node name="haniwa_guard2" parent="enemy" instance=ExtResource( 8 )]
position = Vector2( 440, -160 )

[node name="begin" type="Area2D" parent="."]
position = Vector2( -422, -46 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="begin"]
shape = SubResource( 1 )

[node name="end" type="Area2D" parent="."]
position = Vector2( 722, -38 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="end"]
shape = SubResource( 1 )

[connection signal="body_entered" from="begin" to="." method="_on_begin_body_entered"]
[connection signal="body_entered" from="end" to="." method="_on_end_body_entered"]
